# burger-shop

./: Bookslistpage.qml  CMakeLists.txt  ContactModel.qml  NOTES  README  README.md  Shoppingcartpage.qml  build.sh  dmoapp  dmoapp.service  main.cpp  main.qml  main.qrc  sonar-project.properties
.github/workflows/: cmake-single-platform.yml  github-actions-demo.yml
KoDInput/: CMakeLists.txt  KoDInput.cpp  KoDInput.hpp
book/: CMakeLists.txt  book.cpp  book.hpp  burger.hpp
burger/: CMakeLists.txt  burger.cpp  burger.hpp
cart/: CMakeLists.txt  cart.cpp  cart.hpp
dbhelper/: CMakeLists.txt  dberror.cpp  dberror.h  dberrors.hpp  dbhelper.cpp  dbhelper.hpp
qml/: Burgerslistpage.qml  Shoppingcartpage.qml  main.qml
shop/: CMakeLists.txt  shop.cpp  shop.hpp
sqlite/: CMakeLists.txt
